--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:SX9XENJk,iv:5sf4S0mEQfW9lw8lecmb4r3DPNvw3ImMpnAw7S/YVJo=,tag:CfNZfl6dMR04PwPW2Thu0g==,type:str]
-ansible_user: ENC[AES256_GCM,data:fpR6Ks8M,iv:t8Fu6DJwUSn/P+GdTbQ3Ym6kTLJ1RSUOpbsOzGAIqe4=,tag:5UmhRpBbtdRuT0Zj6nTbmw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:lmeGzvu5,iv:5r3pmnZBcc8Rv6X4QEJvcbLcn4jAeb8HH3P0j5swVo4=,tag:LfmxBQQm+7iBPDglhi+u4g==,type:str]
+kind: ENC[AES256_GCM,data:rwbdJLpS,iv:g5wr7NySTQEtQprHaRpZdAF5BcYTIr6CMru7trRJZT8=,tag:2v3jcOwlwTwJ6yBi/E8TAA==,type:str]
+ansible_user: ENC[AES256_GCM,data:jmvD3u/1,iv:YKeK4xgMpvbi7+NfPZNsB+4OVsV8jufG06YvmUnNyJU=,tag:E2VSMVS63iDnGoNfxCCX2w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:zF6h3Tev,iv:pZ5DuTdCkHOMn+CZ7F4m95pLZ/ULSzBpdlYkNNkPAlU=,tag:qLPdSwx4mB0QpV/3YrACqA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQN2UzYzZLZ25CSU1wODdk
-            UUFPK2hUUklNWGhTV0lqRWdlbjZpSlJob2hrCnJxVUdVNGRqWnBwT2NXRHpDSmlo
-            YitONjhnZ2pPa3RmK1N3TEhyN1k4WE0KLS0tIDYyK3h4VGdWUGwvMjJUOG16dlVI
-            NnNtcEsycCt5RWtScU4rbmhac093QUUK/loRn+L8ehN2Xoj3HEsuDVs80NUN+xHO
-            Vp4WhMel/JXlXY276w78DW9Ppbt8eLyglMWU0kxt9VwmtOAmiPRMjw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOQjlqQ0ZlRHI1Q1JpNVJk
+            UzJta1JVQU42TFVQQWRCeFhlUkVXeVBxSVI0Ci9rdU91UXJIbEdZYlRaZmhZWU01
+            UVhsTE1pN1huTWZMZXdISk9MWkVVSE0KLS0tIDRIa0M1aUdzRXlwQ3JkL3R6Tlpv
+            MkFhcFpRRWNSNnhPVjJEN2lWTk9DTkEKw6lRJZOsZcG4ypABqlqTX1uLlARuMUbu
+            kwYEoizOXXnZIlC9MqAe+ZCvpczXUk5i15pqJjHmQuH8XVokcli0Sw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-07T21:28:52Z"
-    mac: ENC[AES256_GCM,data:EeBnOWZ2lAMdAv99rjm8PFYc38LEvYd15U+iod0JabBHOU+xWFfKMmER7QtYrGMkpZXJ/xLvJxe84g06E2vJRgyc29bmI4SAePlwYXUDt4tXm+nNxSvyZLa5YYQgTFQRKPorOwBRBSGpueVtJhc90SnDKjy4V5INn4PR9rbfEqA=,iv:wIsBLrc2ySf5o3Y13P8l9yPxrvkgxFl38YWWq4/c1WY=,tag:7XNQug9qxYE0JDYmq5QaUQ==,type:str]
+    lastmodified: "2023-02-08T13:54:15Z"
+    mac: ENC[AES256_GCM,data:6cEHX+CYUNMkySjDzwKj+8Vg/WsoH2qQK3CpJ94jgTLoXCMm59okNF0x38g41us2mnxAoJXxEQPHb9qAy3vG4hijtaWFtUf8WZNM2x1tukCVJotOXg9pfmYYVOjDbZZ1LOCkrhfeg5ysm06HjuHVBywawMdMy06R6RmexwZVH6o=,iv:+bTo4hgUAhjR14N1bF2FWASC/X7XWsNbRRwPWxHwSDc=,tag:8ou70V8GW2yBvV4Kfnaf8w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
