--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:GV/jK2Qk,iv:NwYr55TVcuDKFNkSe0a8sbrgJwJgeYhTW81s0Qfmztc=,tag:+viD3QhGMFLmCSPF3yomGQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:cD40ocZ1,iv:RMSl/20SRQKiOZ+jT+FHbsp0/++VvwfyV1s+WJ5HOB4=,tag:3OkJ0B3M9m0c2R44yvKZKw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:RUI7lvoK,iv:bcJOzroCvccliFRafiJ41dKTZGJaXuxeLhbkRroKB8A=,tag:1xgydceE/O6IWrGffEWOww==,type:str]
+kind: ENC[AES256_GCM,data:obMOdsT1,iv:D/H69o/hDmE6/hEqaoUef4dDsCecQCT6NX++ZNuS3bo=,tag:zXkyIBEArSy2iZMdlNjPkQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:VjeQAgnJ,iv:RQCLb9Qo82CtD7I8wxhvwiFZIKntySKmAu0N531oiYI=,tag:/fDmAb00K6snwTbAbwG8+A==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:5D3LqZhT,iv:Rod6JBHOLflCakqomSSAPQi/+8Ep9RQ3RkO8YxArqss=,tag:CaKRkHw8CEMhvNeQwCfWCA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBya0hCTkN6Qk1MM01FeW9N
-            eWNKNEU0Y2l0MHNlbEl0eGtGVDgzUDBkclg0CnkyMTZockFtUnR0eDlWWkJiMXV2
-            MDNyditqcW5DQ3lNZ0tTdnRmWDQwK1kKLS0tIHdCUTl2WWtXUkJ1cUxEMW0wMGhF
-            QXVxUm5iYW1laS8yeXRIaXF6bU8rdlUKjdss+l+ZDLuNOL41SOxInJRgEK63oDd4
-            s8B8oxdzDgWrFd8ysFGva8+a3LOIjekY3Tjr5hyqjk5vzGu2KEl8sg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxMFZWMU1jSDRoZHFjeVNO
+            RVM0elZobjlJV0VjelNiUEpZN0ppMTdQMVVJClB4eDJqMXVWRDdNSjlSM1czTFh2
+            SmpFUjVJN2UrL1dZSXZVMHB0YUpTQzgKLS0tIHYyTGJOQWZLODVSb2ZQaXpFWXk5
+            OE0zc0ltS2YzaUZaeWlsdnBhVkFpVGMKFlaKhZtUvJJgUyoovfSOqfgK52+8YtRs
+            0Lvyll01t5VqTP6o+r7c0VEYWN0sDIrcKrsG8t6W9tpD22ODTsBvvQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-07T21:28:52Z"
-    mac: ENC[AES256_GCM,data:OYKkkRoUsgzpzseTfgBClTYW8RzRDvjpdmdEiUNEATZ9/pasELQxo4Rs6Gd8nSOoTlzGZof87eNpvUCsvflNGYns0fotNSqrdMUwfGfQKlU5YsxMIhb8rLfcLUB2zLZ7kosi1SIJM5X6T2OtUQhGthQPTUIe39g/+pYKHzhhaYs=,iv:jPVQaen0bsGvuQSUWr/LEEberTvSwsvd/XFxwUEYUfQ=,tag:sB8AJw4n35yXbFT+bXjoJA==,type:str]
+    lastmodified: "2023-02-08T13:54:15Z"
+    mac: ENC[AES256_GCM,data:VBVoBM+uHR5G2ocf4zGOPKuohLlPiK49K2NfkCt8bhu/ApOgDWZsv3eULynW91LMM2Yop4ZGdOOPv1sQLM0RXVsYf4SLdFwtabAb6c00VzIvq0ExdNNqDyVCazYu7pdVTVqmkRVGSSWW2zkLpL65zvBnlPIvb0C/W6mqp3RuACM=,iv:u/HlmmWuaUsgQeK0Gj+KBsM3tKKICJ1qBeeK6MpN4po=,tag:bVHYkeEJrwaPJsy151BavQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
