--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:mhKvOG6c,iv:Pj9OoqGsN2gQ3CHKuNXQi1REJEoX6SKl/8IdKLcOopg=,tag:vMtMaxYGt3S/gPIteCcLEQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:3YRZ/KzP,iv:BCBJ4OyU8Gco+qcsTpF/vs1AjgtoRthdxuD9+X3wntM=,tag:6uyYMiv/co5zIAdjNOWJGA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:sWrVPd9F,iv:NynvtklkycYDEoo6CMY1ucWQ7BMIO1x1vF+skma6w5U=,tag:erx2cMu3yTTE3Puarf3r9Q==,type:str]
+kind: ENC[AES256_GCM,data:N8WmMRjC,iv:tm9LkvZmQk1W5E1gsUi1q/KS6l2/TeWYfTwDU64eUvE=,tag:nPdQtWU09QMgp+nz63NGOA==,type:str]
+ansible_user: ENC[AES256_GCM,data:5RIGEfnV,iv:Kad/XHH8nlUaf1K/KXzpEXAM2AQM7nMXp6GKyG2Wn1Y=,tag:FoZRX27cqKMFBOQ5VlqQFQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:exbKFjDj,iv:npvG81P3p8XQiiE4k+sIW33PXL8LwBIB4efBpDjnPzU=,tag:nDGnaTnA1GkHZ0gJL8WQ1g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArRHp0WlZLek9URDgzM25L
-            eTRKeVY0cWN5ZEZHVlpVTlJ4QnhuWUxNaEJnCmZkK2ZCN3NxbGk5aVZJU3JBeE9H
-            b3V6OEt3KzZXcm5zMjByek1tVVVxdG8KLS0tIFFUK3Z2a01wZzVGV1JTN2tORjAv
-            aWtHQ2N6MWRFUDV2NytlV1ZTZXRwR1EKEfNA1v7ZwAEP1fzc948m0d8snBJRsTi8
-            vSVLx21CLApKFrlXI1gIEzCN5q8quevOVXmdpA6f8X4bNGx6q3xRcg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBocVg2bHFBRHJjVGRzSURu
+            VC9oZ1gxcUkrRnE5eVp1dUJpTG1GUUdsNkcwCmwvVkJjZHc4OW00Z3hTVEZwd2dH
+            WCsrQXlvSzZkVUhuOHllL25HSnN2bncKLS0tIE5QQXhpa1phNFowQ3cvWTg4aW12
+            Z1U2aWZBMlJmK3g0TzVlM1d1T3lHRGcK8VTw/A7yS+1u/EiMTuGzV2WkGlXORb1J
+            Yi3W57KkaFgO6lJ29VnegKFgJ0J474xT58dvRR0M5ximVwatdQI1Nw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-07T21:28:52Z"
-    mac: ENC[AES256_GCM,data:zd1ZhadIWPwifBRbKvP7bs/UZ14WCna6pnsf8ITOaDS0AnMf71cOq7PA2Yw6sxWDQfxac+hJnLDRm2vBvHjUZdUJ5aY5oys0xgc+YwWIpJFteL8YgAj+74+mTquewCMv5jHePVYurvgEA2alAbeG2gd8B6mqG9j89BuKyFkEIJo=,iv:BK/KEeyoc8q6x7HYF1JALPQRgl1JQuxFm67A7onO8Ek=,tag:NA5fCwk9iNwrATNMcBdujw==,type:str]
+    lastmodified: "2023-02-08T13:54:15Z"
+    mac: ENC[AES256_GCM,data:MWW3IuZ8h9k8oYX+by2Mxv2ErrTDBOOEfmlKw4T4n/3zwDimQZ3j4Xt7EZywq5A2FKrC6hHBi6Z+ktLAHSb9IY9rgm5SP6WXa5lO/Htd8ch1UvgZomrnuFnoU6kN9c/6jWAFihR3hLA4F77JDY5K506Zb/4moUoEgfPzDnGLWH0=,iv:5ZtS6bbgJO6D7FHJExJX3g6Spb+w6zvnZYWTKbVJBro=,tag:2xTBdTvYm961EpnBuI6pdA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
