--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:j5oUQ+ho,iv:xyx7YYrD9N86RbqJVYtPIObEX1BBB27BuMqsbzVOK54=,tag:YvujNIui7bUdMuTHdGUZxw==,type:str]
-ansible_user: ENC[AES256_GCM,data:nMeROD+X,iv:OOiPcnVBK+nVr6W7CeLgM+8zJ90v4ADOuDSIYMQqRz0=,tag:fDUZfDBcyK4Wh1IJHLC+jg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:pfCI8pa/,iv:neoEgMJDBe5k2gl9+3vgX+fVYJ93VYA/yYhMHstLxng=,tag:nK5MshchUX2am36DRJrjUQ==,type:str]
+kind: ENC[AES256_GCM,data:ufdkMbKe,iv:LJy68bMhkkkYwC/xACsJGEc+q61L/3ImeMfdw1SEN4I=,tag:sueA4aTHEiq1rEZNiZ9ayQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:b8RS0SNk,iv:oP9FtA6C49TTX2yeAqsiKoUJ43OesoFTPv0+mPfkzoM=,tag:VrkDbULRZiOMZtbKQ8tVQA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:KTyE1enA,iv:68HS8HCgSEgxWZHrv5pP3FXoD6wsHdrbimD9/CQbWqU=,tag:RuSXGsFsqTfIDlG2+DVrZg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIS2UyL2VkWE9nRTdwYlRi
-            U2JGMEZycGNFMVZ4eG0yLzNNeWlXb2NlRFhVCnpycHlpa2pnQVBsYUc0djE2aEM5
-            QzBZNmpoYzZtaVVRbnFWSURLU1Zuck0KLS0tIGtzenhVYWdmYnl3eXNBRTBWMUxp
-            UHNKcHJyT1JxRkFnVDdVTGhDZmliYm8KldlXqgCSHmjM+KWoZxtqX/p3PykruqTz
-            5UYvMvoaHpCCaRgaPdBTKz+SDxV4qM6YiRQ362xCP0y1DzZOUes+Wg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsWm1Dd2xKZHAzZDBTSkRr
+            MlFxTGlDZGFsT2ltUzdvTHhGMElRVHhIYkdZCmFkL21BYmFLRk5lTWFCTVgraStB
+            RGxSdFVDVVlMWm8yalRGYS9IRExnZWsKLS0tIDloN3djcDBnLzVsVmZnRjFGY0RR
+            ak4wano0c2J5cFN1WExkdkpMZDE3RjgKxgVgiJMqHSQdCifVcdl2pIJbFHddE5Z4
+            PftnC16MEfTSnaNRXRZNvH6ioZ3Mj+U4pgTA+/Nz5Z4ustrlXFY4Nw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-07T21:28:52Z"
-    mac: ENC[AES256_GCM,data:EZpvnqk0exjjOKCCNrce0EU4+byUNyWw4Tn4NhFoSlcEFE2xZ38Wg+1HRttY/jkbUYru7F520r2sUdJ/tjJAD02fHXbo9oJjT9iiN2/z1nj2ux3ADbhyZwNQ8G12Ly4oimQfaABp8U81NQKKX3+1Vmyxx2B5VQ3nhoeUnkeVdh4=,iv:H9KTCQN9sTwSy/ST6vft2m8I8pWabq8Y/r6pzqbpr6I=,tag:hg3JqeauoA7IkFJjroJltg==,type:str]
+    lastmodified: "2023-02-08T13:54:15Z"
+    mac: ENC[AES256_GCM,data:9EaD5Va0PCXtlrZJZHGeXYen+h6HQbk++zVBm8+lPTomRysxlBPDENa3tsGUbwRleGQ14FDxf9QKDw42JaoZKHjSQQasMJoN1VCFq+7tjdVsZZf2BpXkjYt7/C6SSgha7TY02sh9PI/9wSDT9w/JB4shmNH4ZxlsfreTM3biYcY=,iv:N9qkM7c93wlVE3IOixHDnFc7B9hh02N6cu7BGmIxvZ4=,tag:ED6ECNoqdR42LvKGzUXAfQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
