--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:J2NjtWhB,iv:doBkVIbZL3n6H+ub6/TQc94ZUK7kBwL2b/eudjldNXI=,tag:d6dPrb9EdaB0kZdtE96v3w==,type:str]
-ansible_user: ENC[AES256_GCM,data:8SbuD7EC,iv:UtbDOdjeWuw5hM5q/5HNXjEhZm3q9Dic+YsRZcMYhQM=,tag:iW1NQ71Z60xeLGtV53bYlQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:+eBrN2EU,iv:RIJrvjl6VFxjCbPlHIEOwUtBb0ln8repwYei2q/lzD8=,tag:8TeRm/sBZnJRSSmHWzdBSw==,type:str]
+kind: ENC[AES256_GCM,data:3V5Qsh/0,iv:n7WhlP76yKBN8T2HbTjK8HMBYjBqGPl3aIjVURzlizg=,tag:IDLS9BevjUevcBO1ZFFeWQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:kq7ujnVm,iv:X2QxbleExyQCMMIbIvMH8yN+C+VMCbedOa+2zxnOnRo=,tag:YzcIHzRFy80LLpLa6WfF0g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:v2n+28H0,iv:J6f4ZuYQ2wYpd0rw0dFHznr7V/UrvRXAXvTUFn1Rvgc=,tag:agYAomAAeG1mOJG+vJSaPg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4aVNLODJSekUwQkNZR1hk
-            Q2ZVODJrVDBGd2thZmJYLzhpVXR4d2VsbzFZCnAwalZ0WHNra3gyQmZhd2Z2Z0Vq
-            dnRFSW1pZGVrZGlKWFVaRDVIMU5MbTAKLS0tIEJLTDFLcldKWUdTM2E3MDIvN01v
-            TzJ2YmRXL0U0enV2OE5VL0ZtdlNKTkUK7lm6aEeOPoU7di2R446a7b9IQDPczkj4
-            qG7CpdNwe+KNnLUASnx9VXOt08frt6D8xn9y2G7GBluaYyOXST6txA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNQ3NqZXFRM2VZNm5iR2la
+            blliUWRzVkxId0lPNmwvUHE4Vm43VXBISUU4CnVWcHAwNkJUQ3FPV1N0TEFBeTdF
+            VmZsU0FhVm9HR1BBR2dlTk5jeHk1b0kKLS0tIEtTVmU3UjljU0RQWi9HK0lTRDh0
+            UC84aGxWWlorNG1RbXloNEsrdUkzUVUKZWuRg+04ICJ2v3iD4Bhl16VMBMrNU+JK
+            PsS2nUpwFqS0j4ptALw6mzlLyEArB7Za4dIc32Qvjh7DmbmiEUjYGA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-07T21:28:52Z"
-    mac: ENC[AES256_GCM,data:XjJy0L4XHshwgk+nyT8IvrIR228OI4hUPr1WfD7wv/UlGHxqDscXYneJVd01foi2/7ARtBsl1SVsXx/MMB9tQSMOofG3YcEO6goCUfDaL8PYxV9X6ckOnZtRB0oUAD7ofLlkPpOd1iyb80VnWxIc60619gvvWTOJbf7u7KpBnyg=,iv:SW1ntmjMsv8wqrhBUnr8nUXqwAWrDVaqDCfystbTp9s=,tag:fTlgrSYjgpfw5wG+GDlvMQ==,type:str]
+    lastmodified: "2023-02-08T13:54:15Z"
+    mac: ENC[AES256_GCM,data:7X/S+XhW5OzkZRjaBIEdifZV/I/1gTcQkoFlJTkJ0u221meSUlV+J8m2O2ZpB97+cTSuTpHfXiAlWuFQd78tOawsdEIgZ/ZtQ57UwaYPZtcE0iGPpteWmq/PuFK9VTS7N1gI3qQ1b+qLJYvmQ6ZRIBQ6VuPzYU+xBPR5G9MkPxI=,iv:tAFhOJpzenz5ugB0KqeLul3TywSYmZ3ILqGITZffWd0=,tag:Ugiv+q2uVBu43vewfnsCtA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
