--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -10,3 +10,4 @@ data:
   METALLB_LB_RANGE: "172.16.2.115-172.16.2.140"
   METALLB_K8S_GATEWAY_ADDR: "172.16.2.120"
   METALLB_INGRESS_ADDR: "172.16.2.121"
+  NAS_ADDR: "172.16.2.246"
