another go in deploying the cluster

--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:rwbdJLpS,iv:g5wr7NySTQEtQprHaRpZdAF5BcYTIr6CMru7trRJZT8=,tag:2v3jcOwlwTwJ6yBi/E8TAA==,type:str]
-ansible_user: ENC[AES256_GCM,data:jmvD3u/1,iv:YKeK4xgMpvbi7+NfPZNsB+4OVsV8jufG06YvmUnNyJU=,tag:E2VSMVS63iDnGoNfxCCX2w==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:zF6h3Tev,iv:pZ5DuTdCkHOMn+CZ7F4m95pLZ/ULSzBpdlYkNNkPAlU=,tag:qLPdSwx4mB0QpV/3YrACqA==,type:str]
+kind: ENC[AES256_GCM,data:xUtf76B+,iv:MzEwVAk6vkOmEh+i9Mz/PNDE3zb1I4Na/eHY8JbhCvI=,tag:greGfahjdStQM7s6oj7eUA==,type:str]
+ansible_user: ENC[AES256_GCM,data:2SUzL8UN,iv:42dctG8S5UA8NLd9fzq5ue1188agTLnSXHgvonSDq6Q=,tag:zX5lTNWbgylCd7HfIYBO3Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:Cb4e8BOP,iv:tVaCAWFatd9b7Dy1zBTzNiXeE4WzObtfdOaU93Gd5wM=,tag:guHILIqgEipZxGQ0DR9d9g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOQjlqQ0ZlRHI1Q1JpNVJk
-            UzJta1JVQU42TFVQQWRCeFhlUkVXeVBxSVI0Ci9rdU91UXJIbEdZYlRaZmhZWU01
-            UVhsTE1pN1huTWZMZXdISk9MWkVVSE0KLS0tIDRIa0M1aUdzRXlwQ3JkL3R6Tlpv
-            MkFhcFpRRWNSNnhPVjJEN2lWTk9DTkEKw6lRJZOsZcG4ypABqlqTX1uLlARuMUbu
-            kwYEoizOXXnZIlC9MqAe+ZCvpczXUk5i15pqJjHmQuH8XVokcli0Sw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxNEdWZDhrZno2dDVIMzNl
+            L2hwWlhEUUtROUt2UWVnTmEwVW5nU1N5VEdJCnc0V2xUUitRaUY0OGhzankyZTNY
+            ZWxRWnVnNXduRXlzUDBPN2ZlUnFhY1kKLS0tIEJCakJ2dDl3Q1lKN3hzVmhTeEFl
+            UUVFRjlFOStFL2M1d1JRRm85RXVXL3MKHqZeU3DOpQtMQSePKCalZW7akfRy8bsx
+            5+CUq+letSRXCeZSYPgJLsd79eS7NIBMCCjEJ4b8LqUgIx9yhW88Tg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T13:54:15Z"
-    mac: ENC[AES256_GCM,data:6cEHX+CYUNMkySjDzwKj+8Vg/WsoH2qQK3CpJ94jgTLoXCMm59okNF0x38g41us2mnxAoJXxEQPHb9qAy3vG4hijtaWFtUf8WZNM2x1tukCVJotOXg9pfmYYVOjDbZZ1LOCkrhfeg5ysm06HjuHVBywawMdMy06R6RmexwZVH6o=,iv:+bTo4hgUAhjR14N1bF2FWASC/X7XWsNbRRwPWxHwSDc=,tag:8ou70V8GW2yBvV4Kfnaf8w==,type:str]
+    lastmodified: "2023-02-08T17:41:42Z"
+    mac: ENC[AES256_GCM,data:HyDzPwSaoefYUlqJB8CGL1/tk32Qe/GkW/TawPTwEdhfJEzvR4Yz6x0R0wd0IqI3knndBkuSMBVHSPltwK5njeeQY3oH7p0i09e5XrAEYsWU1JY8G+QGpV7t9TFISkFnRkn4o2LSoFvmwnEgRrCLL0fMkCqsfpjsPwSIUcy/GAA=,iv:gQuLJFZZyxaUPjXPI15d9QcTygk57nEz6UAnIJAEyCI=,tag:IHJehVWDmq2uXS+U8lMEWQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
