--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:obMOdsT1,iv:D/H69o/hDmE6/hEqaoUef4dDsCecQCT6NX++ZNuS3bo=,tag:zXkyIBEArSy2iZMdlNjPkQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:VjeQAgnJ,iv:RQCLb9Qo82CtD7I8wxhvwiFZIKntySKmAu0N531oiYI=,tag:/fDmAb00K6snwTbAbwG8+A==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:5D3LqZhT,iv:Rod6JBHOLflCakqomSSAPQi/+8Ep9RQ3RkO8YxArqss=,tag:CaKRkHw8CEMhvNeQwCfWCA==,type:str]
+kind: ENC[AES256_GCM,data:HWNRQrxR,iv:47qms5TDI70Swbgp4H4E0pcnSPLIDdJnQlFwokFvjj4=,tag:z9fIDZGrUmIJNlj8Rw5TMw==,type:str]
+ansible_user: ENC[AES256_GCM,data:C1SS/zAr,iv:GXeW5nPaE4D9r9n1YDXrjDhuvN68RKYBETz6lKYrIrM=,tag:wfvKjCWni6M3RNi+eRMV9A==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:kDjeokvc,iv:gu0W0uVphJjXJf5wIOSkRZXmhGpYD7d09hAO5q0wnAk=,tag:rrkG0I4y9oF9iTr/QYYh0w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxMFZWMU1jSDRoZHFjeVNO
-            RVM0elZobjlJV0VjelNiUEpZN0ppMTdQMVVJClB4eDJqMXVWRDdNSjlSM1czTFh2
-            SmpFUjVJN2UrL1dZSXZVMHB0YUpTQzgKLS0tIHYyTGJOQWZLODVSb2ZQaXpFWXk5
-            OE0zc0ltS2YzaUZaeWlsdnBhVkFpVGMKFlaKhZtUvJJgUyoovfSOqfgK52+8YtRs
-            0Lvyll01t5VqTP6o+r7c0VEYWN0sDIrcKrsG8t6W9tpD22ODTsBvvQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwK3lIbXE2VDA1SERPdFFT
+            UU41MXdISnNwYTM4UGJLaldvc2FkWlhYYVdFCm9FRkZlVVZndWJRQlpLRXN5Lzdo
+            aWJzYVRXZ3hoWGpPcGV5NXZTNXRrZFkKLS0tIFlpbUJPRVFRVkJtZEtyZDBVSmJy
+            L0o4cmxyakdnNXlFb0xwTEovT0NESk0KQykIR/k+Jyau4WZ0x6r2ZzQlrt5gMcKE
+            4XT1K+GeHsyn7Ft5qCu6cambZDlCRa/6Jcqtp3RyV4WwiujqADGksg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T13:54:15Z"
-    mac: ENC[AES256_GCM,data:VBVoBM+uHR5G2ocf4zGOPKuohLlPiK49K2NfkCt8bhu/ApOgDWZsv3eULynW91LMM2Yop4ZGdOOPv1sQLM0RXVsYf4SLdFwtabAb6c00VzIvq0ExdNNqDyVCazYu7pdVTVqmkRVGSSWW2zkLpL65zvBnlPIvb0C/W6mqp3RuACM=,iv:u/HlmmWuaUsgQeK0Gj+KBsM3tKKICJ1qBeeK6MpN4po=,tag:bVHYkeEJrwaPJsy151BavQ==,type:str]
+    lastmodified: "2023-02-08T17:41:42Z"
+    mac: ENC[AES256_GCM,data:rCQSSjq02tctyYr8A9oNHngHsAgWRPXPmnqdI9STiT9L7QTZPIOgGvwXM3Oj+wRF6/GyH4vtCE2JDooFe/TlSY3F7jS0g5p6Uw1E3QTEmQL72rgjf/Yf5YrqPi0X62oguL+Qw3qAkCQWx3bDq8mSLEw2hxxVP5kn0TuuU2KgpEU=,iv:acS8g18BbzK6RUnQFUfM3QabjEoZgIK1jeT9vJnoIeo=,tag:s+CGpQEBbMyMF+X5UOUUWw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
