--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:ufdkMbKe,iv:LJy68bMhkkkYwC/xACsJGEc+q61L/3ImeMfdw1SEN4I=,tag:sueA4aTHEiq1rEZNiZ9ayQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:b8RS0SNk,iv:oP9FtA6C49TTX2yeAqsiKoUJ43OesoFTPv0+mPfkzoM=,tag:VrkDbULRZiOMZtbKQ8tVQA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:KTyE1enA,iv:68HS8HCgSEgxWZHrv5pP3FXoD6wsHdrbimD9/CQbWqU=,tag:RuSXGsFsqTfIDlG2+DVrZg==,type:str]
+kind: ENC[AES256_GCM,data:FgGppuhh,iv:9+n7tr+MojiLdMLlHMLt8IVHK5JmYj9SKJ3uBV4sRRg=,tag:+op/YhlDrHqiUGHy/YSm/Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:f38qYMMJ,iv:F80E2OHgVqlAlbNxs1bfeNc/EanIHZcBZkrOa8dJ/nw=,tag:6Cb0MchyU+A5AHS17Yb/ZA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:X7ooOcTg,iv:E9l7ktXKey0Bb/+vjOWt+AM2KD3Behy9uS6VihiIdb0=,tag:Ldcu1KHGfNZWHA9ZLLe9nw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsWm1Dd2xKZHAzZDBTSkRr
-            MlFxTGlDZGFsT2ltUzdvTHhGMElRVHhIYkdZCmFkL21BYmFLRk5lTWFCTVgraStB
-            RGxSdFVDVVlMWm8yalRGYS9IRExnZWsKLS0tIDloN3djcDBnLzVsVmZnRjFGY0RR
-            ak4wano0c2J5cFN1WExkdkpMZDE3RjgKxgVgiJMqHSQdCifVcdl2pIJbFHddE5Z4
-            PftnC16MEfTSnaNRXRZNvH6ioZ3Mj+U4pgTA+/Nz5Z4ustrlXFY4Nw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0dWtiWU95M000MVU5TURN
+            aDNYRHhneGowOG5RYm9BcWdVZnAvSVI5bnhrCnpobUdDZDdiSTVTNE5FVW02OUdG
+            NG9uT2RoVlIzT1A4cFY3WFA0Umc0RW8KLS0tIEhCYmg2L0Facko0SjkzZEtGSU1y
+            Ulp1Zlc1eWR1QjhmZTZFaU5vaWZZdWcK6oLhaCs2K/4F5G4UISjuHBlLWDviCIv2
+            ZXpj0GCrpud5ci/uDcWQAChiyO6yZVRKB8DHUWwxtnITpOjVcAhRnw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T13:54:15Z"
-    mac: ENC[AES256_GCM,data:9EaD5Va0PCXtlrZJZHGeXYen+h6HQbk++zVBm8+lPTomRysxlBPDENa3tsGUbwRleGQ14FDxf9QKDw42JaoZKHjSQQasMJoN1VCFq+7tjdVsZZf2BpXkjYt7/C6SSgha7TY02sh9PI/9wSDT9w/JB4shmNH4ZxlsfreTM3biYcY=,iv:N9qkM7c93wlVE3IOixHDnFc7B9hh02N6cu7BGmIxvZ4=,tag:ED6ECNoqdR42LvKGzUXAfQ==,type:str]
+    lastmodified: "2023-02-08T17:41:42Z"
+    mac: ENC[AES256_GCM,data:dFTagjB9F9RMaN7LOye3eB14jcmbi6737DmC+eEiCWv2ELCZKWitKmREIM4y+TT4EvVxESptqkek5srwoENeQj239fulr14G/YC9QELioINWXEoS3Q6nD9sjZwYElBTp7cC5Tgd+DYJEdW6HOSZDhxfxKtjA3EBL1goe8AvqXL4=,iv:hAQAOMGz99C4QKGGwS99nIxYdtKjqaca0W4wIF2sPik=,tag:NbLbYU8Oj+hzTUcC55fcrQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
