--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:3V5Qsh/0,iv:n7WhlP76yKBN8T2HbTjK8HMBYjBqGPl3aIjVURzlizg=,tag:IDLS9BevjUevcBO1ZFFeWQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:kq7ujnVm,iv:X2QxbleExyQCMMIbIvMH8yN+C+VMCbedOa+2zxnOnRo=,tag:YzcIHzRFy80LLpLa6WfF0g==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:v2n+28H0,iv:J6f4ZuYQ2wYpd0rw0dFHznr7V/UrvRXAXvTUFn1Rvgc=,tag:agYAomAAeG1mOJG+vJSaPg==,type:str]
+kind: ENC[AES256_GCM,data:sQcWBjE+,iv:G81YbJXvDFbLvKi8xDKrMRDWiXyW6mEDnPZXWMxTiEo=,tag:a+bT4MZ4pc2Ef6Is9saUeQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:3/2KkIr2,iv:uvouOqhjHvGP6OhDod+3Sq8vYxTX77z68h7EU4LTl1g=,tag:G4cj4edmhJjc93Njx3SjeA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:XJVWieB2,iv:tvviWerqdGdlgg7PxaihV/8tTbs7GXmbX0qjGLdccSc=,tag:rsAxzZcPbJtpoN+MQbDUuw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNQ3NqZXFRM2VZNm5iR2la
-            blliUWRzVkxId0lPNmwvUHE4Vm43VXBISUU4CnVWcHAwNkJUQ3FPV1N0TEFBeTdF
-            VmZsU0FhVm9HR1BBR2dlTk5jeHk1b0kKLS0tIEtTVmU3UjljU0RQWi9HK0lTRDh0
-            UC84aGxWWlorNG1RbXloNEsrdUkzUVUKZWuRg+04ICJ2v3iD4Bhl16VMBMrNU+JK
-            PsS2nUpwFqS0j4ptALw6mzlLyEArB7Za4dIc32Qvjh7DmbmiEUjYGA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHQWxpZWFiSEU2TEFpenRt
+            aTNUNERqK29iVlhXd0J0QXd1MytRTXRZMzBzCjVveFp0THFhL3hZOUVaMkZqV05s
+            MnorNk5jbVZhYTRmeDk1UmdQK1o0QUEKLS0tIDRvTWZCbC9FTVN5SVVtdXVkbGxq
+            T0hqYnp1cHdzaFZ2ejJ6d1VmQ0xWV00KJyzcTmlEhC0L7nxaP1Zu/5jeMaKVeye1
+            zmDmDsG1QY9CCX2eC/TDfYwhBC3oq5oHzqN5CVeqbKHRG0Q4SnPAyw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T13:54:15Z"
-    mac: ENC[AES256_GCM,data:7X/S+XhW5OzkZRjaBIEdifZV/I/1gTcQkoFlJTkJ0u221meSUlV+J8m2O2ZpB97+cTSuTpHfXiAlWuFQd78tOawsdEIgZ/ZtQ57UwaYPZtcE0iGPpteWmq/PuFK9VTS7N1gI3qQ1b+qLJYvmQ6ZRIBQ6VuPzYU+xBPR5G9MkPxI=,iv:tAFhOJpzenz5ugB0KqeLul3TywSYmZ3ILqGITZffWd0=,tag:Ugiv+q2uVBu43vewfnsCtA==,type:str]
+    lastmodified: "2023-02-08T17:41:42Z"
+    mac: ENC[AES256_GCM,data:T/We3CUUQgIImTvaW0/67BAZMmqT+Cy4xf3cX+E50tJYe73AYsZTO1iq9jF/IoPjEUw/swzgqeQbAVb3Fv7Z3aAm1u+0K7l1/WMufTu1NFcOUN37vNGD3YZeWk+zCMEYuWW6fU0L3lO8/PyWVz8dOKnaR59L0W/LMDcizKjDhlg=,iv:ygfBZv690UJaNUFg+TMvDfPcUUdv5Z32BORcIvIf6p0=,tag:lwb2An4fNYYRqLjB+jIxKQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
