--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:N8WmMRjC,iv:tm9LkvZmQk1W5E1gsUi1q/KS6l2/TeWYfTwDU64eUvE=,tag:nPdQtWU09QMgp+nz63NGOA==,type:str]
-ansible_user: ENC[AES256_GCM,data:5RIGEfnV,iv:Kad/XHH8nlUaf1K/KXzpEXAM2AQM7nMXp6GKyG2Wn1Y=,tag:FoZRX27cqKMFBOQ5VlqQFQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:exbKFjDj,iv:npvG81P3p8XQiiE4k+sIW33PXL8LwBIB4efBpDjnPzU=,tag:nDGnaTnA1GkHZ0gJL8WQ1g==,type:str]
+kind: ENC[AES256_GCM,data:3LkveDW0,iv:mLpFDRo+V9BUXLNa/noUvhHzEdSiL4MjFlf1jpWYm9c=,tag:EUbLbkB3REI1nfHs05XAqg==,type:str]
+ansible_user: ENC[AES256_GCM,data:YrnICAyM,iv:ghsbmHjyah/xurueDrdMaAF4MPYdSuB9Zt0alBA9PHY=,tag:5QdsdSpR3yLAXFw2lLR9hA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:CD/vjx3J,iv:wdHUjBCqtxyUS+27PS9qJl1aOgCoyfwZYbiGd8DNhks=,tag:tmB/iVnujIqQzXHZx6PB+w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBocVg2bHFBRHJjVGRzSURu
-            VC9oZ1gxcUkrRnE5eVp1dUJpTG1GUUdsNkcwCmwvVkJjZHc4OW00Z3hTVEZwd2dH
-            WCsrQXlvSzZkVUhuOHllL25HSnN2bncKLS0tIE5QQXhpa1phNFowQ3cvWTg4aW12
-            Z1U2aWZBMlJmK3g0TzVlM1d1T3lHRGcK8VTw/A7yS+1u/EiMTuGzV2WkGlXORb1J
-            Yi3W57KkaFgO6lJ29VnegKFgJ0J474xT58dvRR0M5ximVwatdQI1Nw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVV01NaDB6TVpKT2FVZUZw
+            aW9jdktyYmVJVXNYa2pVVW1IN09aT2tkclhrCk4ra2NzQWhEYThEcFVBZytZS1Fj
+            YmJXK1d6SnlqTE1JOXpKd2RsWWpOSVUKLS0tIGVDM1owc1ZMaTRQSTJzZWQ2OTBj
+            NmVsTkZ2NmdSeXdYS2l0T2RUejZkUDAKyIUd4c9ErP4QHN54wUKFoF9uQ/IpubOD
+            p6Ff20lS2I+/zLbGybJ/F9JDoocOLgPLJ0//ZKhCE3GCRJ5ZiCigeQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T13:54:15Z"
-    mac: ENC[AES256_GCM,data:MWW3IuZ8h9k8oYX+by2Mxv2ErrTDBOOEfmlKw4T4n/3zwDimQZ3j4Xt7EZywq5A2FKrC6hHBi6Z+ktLAHSb9IY9rgm5SP6WXa5lO/Htd8ch1UvgZomrnuFnoU6kN9c/6jWAFihR3hLA4F77JDY5K506Zb/4moUoEgfPzDnGLWH0=,iv:5ZtS6bbgJO6D7FHJExJX3g6Spb+w6zvnZYWTKbVJBro=,tag:2xTBdTvYm961EpnBuI6pdA==,type:str]
+    lastmodified: "2023-02-08T17:41:42Z"
+    mac: ENC[AES256_GCM,data:EEbOuYspmfNMXs+FYU5xnn7eeuceMLqoD+mV5myB2ejHKnZfGF4L6bDOOJrtzMFSTu3cxACiiABLLx954My2zo8DJ3YbQ0MDKO94Jw4/ua/ahrSgqOepa+QWRAk45Ql7aQdYost2DfKZNyombIqq5TshaHoE3WmKHn/tEU1oNus=,iv:qIjgwQF8CD2sz3pT1igAudVPBRYSCVRUSgkhEEPGcmI=,tag:QL6r6ibchC+id2/0Lq/TrQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
