changes to backup path in longhorn config

--- a/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
             - "longhorn.${SECRET_DOMAIN}"
     defaultSettings:
       backupstorePollInterval: 300
-      backupTarget: nfs://${NAS_ADDR}:/volume1/clusterbackup
+      backupTarget: "nfs://${NAS_ADDR}:/volume1/clusterbackup"
       defaultDataLocality: best-effort
       defaultReplicaCount: 3
       createDefaultDiskLabeledNodes: true
