changes to sample env settings,include NAS address

--- a/.config.sample.env
+++ b/.config.sample.env
@@ -51,6 +51,9 @@ export BOOTSTRAP_KUBE_VIP_ADDR=""
 # e.g. America/New_York
 export BOOTSTRAP_TIMEZONE="Etc/UTC"
 
+# Set the Address of the NAS to send Longhorn backups to
+export NAS_ADDR=""
+
 #
 # Ansible related variables
 #
