New run containing config changes

--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:xUtf76B+,iv:MzEwVAk6vkOmEh+i9Mz/PNDE3zb1I4Na/eHY8JbhCvI=,tag:greGfahjdStQM7s6oj7eUA==,type:str]
-ansible_user: ENC[AES256_GCM,data:2SUzL8UN,iv:42dctG8S5UA8NLd9fzq5ue1188agTLnSXHgvonSDq6Q=,tag:zX5lTNWbgylCd7HfIYBO3Q==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:Cb4e8BOP,iv:tVaCAWFatd9b7Dy1zBTzNiXeE4WzObtfdOaU93Gd5wM=,tag:guHILIqgEipZxGQ0DR9d9g==,type:str]
+kind: ENC[AES256_GCM,data:xYE74XoL,iv:doM/HnHQExBkn8PiY7H9mwXSDVx26BtJAuTBcyAMSFA=,tag:xpV4aND3phXJ0vvm0a0q1w==,type:str]
+ansible_user: ENC[AES256_GCM,data:JeihR3y4,iv:clnU/NR62xRntA267QRP9TuErQ2VzbSBXkb95vLyq5U=,tag:c6uzkY2tzNTEFCpidrTiNg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:1aJ6H2M7,iv:+IyHxmtBDaXCtN2aX3RF1fjhZEEMY4iOhiVYkMypk5I=,tag:4F944ny8+2XxWoYHMKXpoQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxNEdWZDhrZno2dDVIMzNl
-            L2hwWlhEUUtROUt2UWVnTmEwVW5nU1N5VEdJCnc0V2xUUitRaUY0OGhzankyZTNY
-            ZWxRWnVnNXduRXlzUDBPN2ZlUnFhY1kKLS0tIEJCakJ2dDl3Q1lKN3hzVmhTeEFl
-            UUVFRjlFOStFL2M1d1JRRm85RXVXL3MKHqZeU3DOpQtMQSePKCalZW7akfRy8bsx
-            5+CUq+letSRXCeZSYPgJLsd79eS7NIBMCCjEJ4b8LqUgIx9yhW88Tg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBobHdQcmE0ZWJ0bjVEd3A2
+            NUl6R2ZRS3BycllvMGY4MVo2VDJwUjRRdzM4CkhCVkczV0ZrYktVN1F2aVVldWRv
+            OWRaVTU0Zk1wWG1CUFlraTNjZmh5MXMKLS0tIFdUQVlxdUlwSlVaTmgrdmJHb3pr
+            MlNIb2NxT2NnTlVjNDQ1MFh1TVJRNzQK+wBnyOvPm4hfHrUbKhHzVce63YlDV1W6
+            OA8M79HozyHA/A//10YtP1BszBkxk+SY4cGVfvMzm7GtG2A1JJ63ng==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:41:42Z"
-    mac: ENC[AES256_GCM,data:HyDzPwSaoefYUlqJB8CGL1/tk32Qe/GkW/TawPTwEdhfJEzvR4Yz6x0R0wd0IqI3knndBkuSMBVHSPltwK5njeeQY3oH7p0i09e5XrAEYsWU1JY8G+QGpV7t9TFISkFnRkn4o2LSoFvmwnEgRrCLL0fMkCqsfpjsPwSIUcy/GAA=,iv:gQuLJFZZyxaUPjXPI15d9QcTygk57nEz6UAnIJAEyCI=,tag:IHJehVWDmq2uXS+U8lMEWQ==,type:str]
+    lastmodified: "2023-02-08T17:51:34Z"
+    mac: ENC[AES256_GCM,data:4eIC+wdpYIxhru1Bu77R1s1BXvKuDSdwh3pKwUrKatL08jqme9Mc9i6hSpg9+ngbVKD2SUOLNMHt8fkZDaLXrJHcJ3v9syKEeX5tVPkXqRnSPNSx6rzyf9T8OeoV8DPeEAXMUj+LDEdWAsYywrzUWTn9oHjBYqaVZFHzwtkkMP4=,iv:cWF5qtU4eT/bKV5EcAQg3sQGULwavqxrjGvy5nn3wXQ=,tag:DMC9AEX7G5PyRH67UwRICA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
