--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:HWNRQrxR,iv:47qms5TDI70Swbgp4H4E0pcnSPLIDdJnQlFwokFvjj4=,tag:z9fIDZGrUmIJNlj8Rw5TMw==,type:str]
-ansible_user: ENC[AES256_GCM,data:C1SS/zAr,iv:GXeW5nPaE4D9r9n1YDXrjDhuvN68RKYBETz6lKYrIrM=,tag:wfvKjCWni6M3RNi+eRMV9A==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:kDjeokvc,iv:gu0W0uVphJjXJf5wIOSkRZXmhGpYD7d09hAO5q0wnAk=,tag:rrkG0I4y9oF9iTr/QYYh0w==,type:str]
+kind: ENC[AES256_GCM,data:kwiDWVcT,iv:J7TBAlCl3cc2jS1/kK3p18MCTzZgOrkUmiUQFSYZ9yU=,tag:tHb6JX+wgNMUyrdDVh/0lQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:L0f72+27,iv:Op7wF+cMwrGe7j8XKfQZm2PYWt9UDvec4kG9lc2Q4KA=,tag:ODikK2IEl80AbwHO5DoK0Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:QUaoi82z,iv:7AcGxb5sp5F6sjU9gdaNdwQEuzyLa4OODy3mOyI8Gow=,tag:sWGkvBXxINMYGOMtlQq60w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwK3lIbXE2VDA1SERPdFFT
-            UU41MXdISnNwYTM4UGJLaldvc2FkWlhYYVdFCm9FRkZlVVZndWJRQlpLRXN5Lzdo
-            aWJzYVRXZ3hoWGpPcGV5NXZTNXRrZFkKLS0tIFlpbUJPRVFRVkJtZEtyZDBVSmJy
-            L0o4cmxyakdnNXlFb0xwTEovT0NESk0KQykIR/k+Jyau4WZ0x6r2ZzQlrt5gMcKE
-            4XT1K+GeHsyn7Ft5qCu6cambZDlCRa/6Jcqtp3RyV4WwiujqADGksg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSakkyaXIxMFVsYTJadyts
+            ZVI5cGZsTmY0MUhJZVgxczJoNThLMStaRkdJCkFpc09JWUE1UTBQUi94a1RXZEZw
+            TmE2MGx4RUZ6MU96OW5yRXo4M01Hdk0KLS0tIEU4NTFGSDAxZ2FyMjFFdytPWWNj
+            WXBBN0ljRUZBRHYrTjlBRXdmR3dVbU0KUjDICKtzV8/s3Nk+tBNkDUsaIZ+VFDzS
+            u46mcEx4pvB2JTPnoiP25yg2E6misg3v0jImth4PQJl/KfjNjXZ8sQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:41:42Z"
-    mac: ENC[AES256_GCM,data:rCQSSjq02tctyYr8A9oNHngHsAgWRPXPmnqdI9STiT9L7QTZPIOgGvwXM3Oj+wRF6/GyH4vtCE2JDooFe/TlSY3F7jS0g5p6Uw1E3QTEmQL72rgjf/Yf5YrqPi0X62oguL+Qw3qAkCQWx3bDq8mSLEw2hxxVP5kn0TuuU2KgpEU=,iv:acS8g18BbzK6RUnQFUfM3QabjEoZgIK1jeT9vJnoIeo=,tag:s+CGpQEBbMyMF+X5UOUUWw==,type:str]
+    lastmodified: "2023-02-08T17:51:34Z"
+    mac: ENC[AES256_GCM,data:/4Qwh7LBuD6f0YhUxCqDjMQ45796vyI2LlGSAILlQ8uyNqF3dI7cUA0UelONuVaSNVBwx0H1l0CfbAZndOtdEogcJcXYC0aV3MolwfRaCHI2vtL55amRrIo+S+trw5CZ5LbIdmZ8NRUP0E1bmu/dlSqPck3CMS63cgB7OtbLbDk=,iv:Yr/ytwxNptVPYdxhESvp1LzQw2J9xD6Go6u1AHJtZMU=,tag:rDNRvcnIbklLyMkj6Thtow==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
