--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:FgGppuhh,iv:9+n7tr+MojiLdMLlHMLt8IVHK5JmYj9SKJ3uBV4sRRg=,tag:+op/YhlDrHqiUGHy/YSm/Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:f38qYMMJ,iv:F80E2OHgVqlAlbNxs1bfeNc/EanIHZcBZkrOa8dJ/nw=,tag:6Cb0MchyU+A5AHS17Yb/ZA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:X7ooOcTg,iv:E9l7ktXKey0Bb/+vjOWt+AM2KD3Behy9uS6VihiIdb0=,tag:Ldcu1KHGfNZWHA9ZLLe9nw==,type:str]
+kind: ENC[AES256_GCM,data:EYQcVo9V,iv:yYEpXMTrTD2bz+rcW/Nph1T7OswfbkjLbBzzkvIoZOY=,tag:Fn5BHYCLoK4fAybXpvyuKw==,type:str]
+ansible_user: ENC[AES256_GCM,data:6moZgJF0,iv:bwfxfyroby4LVXRzb1CJUfJTZTBj9zmuGDyZS9hb1QA=,tag:jRoTjbqs2PpvbXbo6uz1Lg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:w/1xrU92,iv:AYbx+E8rGeuXG/39ZBj0wUVZ/Js5Y8rzmBNQyBpwYow=,tag:dS98OhukHB0wzzIWyz5Reg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0dWtiWU95M000MVU5TURN
-            aDNYRHhneGowOG5RYm9BcWdVZnAvSVI5bnhrCnpobUdDZDdiSTVTNE5FVW02OUdG
-            NG9uT2RoVlIzT1A4cFY3WFA0Umc0RW8KLS0tIEhCYmg2L0Facko0SjkzZEtGSU1y
-            Ulp1Zlc1eWR1QjhmZTZFaU5vaWZZdWcK6oLhaCs2K/4F5G4UISjuHBlLWDviCIv2
-            ZXpj0GCrpud5ci/uDcWQAChiyO6yZVRKB8DHUWwxtnITpOjVcAhRnw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0OVVHQlNja0dEWkZnSEY0
+            dUpjOHEyd0E2Sk01ZkRkK1ZwSlp0ZGg3MFU0CnhEeGFyTyszR1ZiREVVVFZwdy9S
+            ME55UGdVNmlzN1ZJb2RGTmt2L3cvSTgKLS0tIHdLajk2MWV4L0tUVkJmWHJxMHQr
+            dXdzWDNqcjFsMjBQT2x2VUhYWmczdWsKmCTjcdRWOxesUo2GrIoHiVq1DBH1IZhI
+            qSOUFUH+bVWeDKOiUfaPlbg3yVNeOlYqaeChcUo/FW/98EHICgAnlQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:41:42Z"
-    mac: ENC[AES256_GCM,data:dFTagjB9F9RMaN7LOye3eB14jcmbi6737DmC+eEiCWv2ELCZKWitKmREIM4y+TT4EvVxESptqkek5srwoENeQj239fulr14G/YC9QELioINWXEoS3Q6nD9sjZwYElBTp7cC5Tgd+DYJEdW6HOSZDhxfxKtjA3EBL1goe8AvqXL4=,iv:hAQAOMGz99C4QKGGwS99nIxYdtKjqaca0W4wIF2sPik=,tag:NbLbYU8Oj+hzTUcC55fcrQ==,type:str]
+    lastmodified: "2023-02-08T17:51:34Z"
+    mac: ENC[AES256_GCM,data:Nqrd2gUg4vVOEitC1C4wM9BHj98wXh+yEe5hjlDSfDtYbdsChZ07oPpF8ZBE5etlPJXXsHaCvJRHJbeu+ltCw7w+H/HdD5xmI7LCNGpgEeAvRalXygKX6zerlhd1O5ShLWRloRBzhdIy+gzNa2s6cc7JEecG+YRRX6jbXI0YeKk=,iv:95gWUw84timc08KyKlhT9MXyrhaSBDJ1Yza+LD/0kQE=,tag:VYo8dH5htqGMTZcBAkVBaA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
