--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:sQcWBjE+,iv:G81YbJXvDFbLvKi8xDKrMRDWiXyW6mEDnPZXWMxTiEo=,tag:a+bT4MZ4pc2Ef6Is9saUeQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:3/2KkIr2,iv:uvouOqhjHvGP6OhDod+3Sq8vYxTX77z68h7EU4LTl1g=,tag:G4cj4edmhJjc93Njx3SjeA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:XJVWieB2,iv:tvviWerqdGdlgg7PxaihV/8tTbs7GXmbX0qjGLdccSc=,tag:rsAxzZcPbJtpoN+MQbDUuw==,type:str]
+kind: ENC[AES256_GCM,data:jPyXhEjA,iv:8NulMv3kMcFNwOrciRP472Ebt/HorrgUwLIY70c/nEc=,tag:46zE9Re5w6+G+vitCUCZUA==,type:str]
+ansible_user: ENC[AES256_GCM,data:c+6zc5BD,iv:4rx6xwssXusdMz1uaJvbVni+217xCJR0yUJ1zYUz7sI=,tag:lh43jOeWJD+LWuNz2FnRLQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:oe0iO8xE,iv:2hc5+kPAH9O7PIYqBZ4mTip3gh8f1gqD0118CmhayRk=,tag:Ru4Vau4JDYHL4V379dy/UA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHQWxpZWFiSEU2TEFpenRt
-            aTNUNERqK29iVlhXd0J0QXd1MytRTXRZMzBzCjVveFp0THFhL3hZOUVaMkZqV05s
-            MnorNk5jbVZhYTRmeDk1UmdQK1o0QUEKLS0tIDRvTWZCbC9FTVN5SVVtdXVkbGxq
-            T0hqYnp1cHdzaFZ2ejJ6d1VmQ0xWV00KJyzcTmlEhC0L7nxaP1Zu/5jeMaKVeye1
-            zmDmDsG1QY9CCX2eC/TDfYwhBC3oq5oHzqN5CVeqbKHRG0Q4SnPAyw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUYUJwckU4OEZLZ0JKUmpG
+            MjBYYTZuTWVzMXkwdjZFcEdoWVRqbHhBeUdVClNWa1o1eXQ3RmtuQjNqK1labFpT
+            SGo4TG4rdi9VaHRualJKb09XTjA2OVUKLS0tIFF6UmRaaGVLd3d2S24ybDlIRFRq
+            VVpVN1NaNmRjenc2TkV0aUZGdDFpVE0KEEMWF00MLTSQ11old4Y/KgcxQO9Fqu8p
+            9kjClGoPNR/MtnnlgfEYRNjBuh6wTM8zIHHm1JHa0G7n9W5XFyvV3Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:41:42Z"
-    mac: ENC[AES256_GCM,data:T/We3CUUQgIImTvaW0/67BAZMmqT+Cy4xf3cX+E50tJYe73AYsZTO1iq9jF/IoPjEUw/swzgqeQbAVb3Fv7Z3aAm1u+0K7l1/WMufTu1NFcOUN37vNGD3YZeWk+zCMEYuWW6fU0L3lO8/PyWVz8dOKnaR59L0W/LMDcizKjDhlg=,iv:ygfBZv690UJaNUFg+TMvDfPcUUdv5Z32BORcIvIf6p0=,tag:lwb2An4fNYYRqLjB+jIxKQ==,type:str]
+    lastmodified: "2023-02-08T17:51:34Z"
+    mac: ENC[AES256_GCM,data:afwEy/UM+xNhFs2Rurkx4D1G3lgZol4ezdiMpRhewlYRKHShYF15Yjai7tOiOsC2xYAwC4d4Sl1ICDYK8G1dX0p7voEC1/6wS6ovbmBOsXFilNpUJbgIPWE7B3vtONgm9pS57wfH0h7BaSanZq5nDe6qRlQ4aVgQfHJD9NhYI5c=,iv:JGAZnnMeQqn/gekLTEu/QA7V6EyHotnJjw9vu9+x2Es=,tag:pYh6hWdEja8RzgvWF36K3g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
