--- a/tmpl/kubernetes/flux/cluster-settings.yaml
+++ b/tmpl/kubernetes/flux/cluster-settings.yaml
@@ -10,3 +10,4 @@ data:
   METALLB_LB_RANGE: "${BOOTSTRAP_METALLB_LB_RANGE}"
   METALLB_K8S_GATEWAY_ADDR: "${BOOTSTRAP_METALLB_K8S_GATEWAY_ADDR}"
   METALLB_INGRESS_ADDR: "${BOOTSTRAP_METALLB_INGRESS_ADDR}"
+  NAS_ADDR: "${NAS_ADDR}"
